--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,46 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+
 spring:
-  application:
-    name: AI_CSGO_Monitor
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/csgo_monitor?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: 12345678
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 30000
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      logic-delete-field: delFlag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      id-type: auto
+
+# 自定义配置
+csgo:
+  monitor:
+    # 数据源配置
+    data-sources:
+      buff:
+        base-url: https://buff.163.com
+        enabled: true
+      steam:
+        base-url: https://steamcommunity.com
+        enabled: true
+    # 监控配置
+    schedule:
+      price-monitor:
+        enabled: true
+        cron: "0 */5 * * * ?"  # 每5分钟执行一次
+      inventory-monitor:
+        enabled: true
+        cron: "0 */10 * * * ?" # 每10分钟执行一次
