--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,22 +25,23 @@ mybatis-plus:
       logic-not-delete-value: 0
       id-type: auto
 
-# 自定义配置
+# Steam API配置
 csgo:
-  monitor:
-    # 数据源配置
-    data-sources:
-      buff:
-        base-url: https://buff.163.com
-        enabled: true
-      steam:
-        base-url: https://steamcommunity.com
-        enabled: true
-    # 监控配置
-    schedule:
-      price-monitor:
-        enabled: true
-        cron: "0 */5 * * * ?"  # 每5分钟执行一次
-      inventory-monitor:
-        enabled: true
-        cron: "0 */10 * * * ?" # 每10分钟执行一次
+  steam:
+    app-id: "730"
+    currency: "CNY"
+    country: "CN"
+    language: "schinese"
+    timeout: 10000
+    rate-limit-delay: 1000  # 请求间隔1秒
+    max-retry-times: 3
+    enabled: true
+
+    monitor:
+      cron: "0 */5 * * * ?"  # 每5分钟执行
+      max-skins-per-run: 100  # 每次最多监控100个饰品
+      record-history: true
+
+    alert:
+      price-change-threshold: 10.0  # 价格变化超过10%触发预警
+      inventory-change-threshold: 50  # 库存变化超过50触发预警
