--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
     context-path: /api
 
 spring:
+  # 数据库相关配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/csgo_monitor?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
@@ -13,6 +14,14 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 5
       connection-timeout: 30000
+
+  # redis相关配置
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: "" # 有密码填密码
+      database: 0
 
 mybatis-plus:
   configuration:
