refactor(CS2 饰品全链路监测与智能量化分析平台): 移除代理池和悠悠有品相关功能
- 移除 docker-compose.yml 中的 proxy_pool 服务配置
- 注释掉 GlobalProxyFetcherTask 类上的 @Component 注解，停用海外代理获取任务
- 注释掉 InternalFetcherTask 中的定时任务注解，并将青果API请求数量从5改为10
- 更新 README.md 中关于国外代理功能的状态标记
- 移除 TaskWorker 类上的 @Component 注解和 YoupinStrategy 引用
- 删除 YoupinStrategy.java 文件，完全移除悠悠有品抓取策略
- 从 TaskWorker 中移除 youpinIds 初始化代码

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "6379:6379"
 
-  proxy_pool:
-    image: jhao104/proxy_pool:latest
-    container_name: proxy_pool
-    ports:
-      - "5010:5010"
-    depends_on:
-      - db
-    environment:
-      - DB_CONN=redis://db:6379/0
+#  proxy_pool:
+#    image: jhao104/proxy_pool:latest
+#    container_name: proxy_pool
+#    ports:
+#      - "5010:5010"
+#    depends_on:
+#      - db
+#    environment:
+#      - DB_CONN=redis://db:6379/0
